feat: #CERUTF-0 Adicionar novos atributos no retorno dos endpoints ( participantsCount ) + tratar erros